corrected config text

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -745,8 +745,9 @@
                 <form id="msform">
                   <!-- fieldsets -->
                   <fieldset>
-                    <h2 class="fs-title">Customize the logo, address, email address and telepohone number of the website.</h2>
-                    <h3>Upload your own logo</h3>
+                    <h2 class="fs-title">Customize the website details</h2>
+                    <!-- <h3>Upload your own logo</h3> -->
+                    <label>Company logo</label>
                     <div id="logo-file-upload" class="file-upload">
                       <button id="logo-file-upload-btn" class="file-upload-btn" type="button" onclick="$('#logo-input').trigger( 'click' );">Add Image</button>
                       <div id="logo-image-upload-wrap" class="image-upload-wrap">
