corrected config ui bug

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -44,7 +44,7 @@
             <!-- Top Contact Info -->
             <div class="top-contact-info d-flex align-items-center">
               <a href="#"><img src="img/core-img/placeholder.png" alt=""> <span id="address-text">25 th Street Avenue, Los Angeles, CA</span></a>
-              <a href="#"><img src="img/core-img/message.png" alt=""> <span id="email-text">office@yourfirm.com</span></a>
+              <a href="#"><img src="img/core-img/message.png" alt=""> <span id="email-text">info@apibank.com</span></a>
             </div>
           </div>
         </div>
@@ -764,13 +764,13 @@
                       </div>
                     </div>
                     <label for="company-name">Company Name</label>
-                    <input id="company-name" />                    
+                    <input id="company-name" value="Apibank"/>                    
                     <label for="company-address">Company Address</label>
-                    <input id="company-address" />
-                    <label for="company-email">Company Website</label>
-                    <input id="company-email" />
+                    <input id="company-address" value="25 th Street Avenue, Los Angeles, CA" />
+                    <label for="company-email">Company Email</label>
+                    <input id="company-email" value="info@apibank.com"/>
                     <label for="company-phone">Company Phone</label>
-                    <input id="company-phone" />                    
+                    <input id="company-phone" value="+800 49 900 900" />                    
                   </fieldset>
                 </form>
               </div>
