Changed label for starting instant credit

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -116,7 +116,7 @@
                 <h6 data-animation="fadeInUp" data-delay="100ms">2 years interest</h6>
                 <h2 data-animation="fadeInUp" data-delay="300ms">get your <span>loan</span> now</h2>
                 <p data-animation="fadeInUp" data-delay="500ms">Vestibulum eu vehicula elit, nec elementum orci. Praesent aliquet ves tibulum tempus. Pellentesque posuere pharetra turpis, eget finibus erat porta placerat.</p>
-                <a href="#" data-toggle="modal" data-target="#credit-enroll-dialog" class="btn credit-btn mt-50" data-animation="fadeInDown" data-delay="700ms">Discover</a>
+                <a href="#" data-toggle="modal" data-target="#credit-enroll-dialog" class="btn credit-btn mt-50" data-animation="fadeInDown" data-delay="700ms">Try Instant Credit with Google ML</a>
               </div>
             </div>
           </div>
@@ -136,7 +136,7 @@
                 <h6 data-animation="fadeInDown" data-delay="100ms">2 years interest</h6>
                 <h2 data-animation="fadeInDown" data-delay="300ms">get your <span>loan</span> now</h2>
                 <p data-animation="fadeInDown" data-delay="500ms">Vestibulum eu vehicula elit, nec elementum orci. Praesent aliquet ves tibulum tempus. Pellentesque posuere pharetra turpis, eget finibus erat porta placerat.</p>
-                <a href="#" data-toggle="modal" data-target="#credit-enroll-dialog" class="btn credit-btn mt-50" data-animation="fadeInDown" data-delay="700ms">Discover</a>
+                <a href="#" data-toggle="modal" data-target="#credit-enroll-dialog" class="btn credit-btn mt-50" data-animation="fadeInDown" data-delay="700ms">Try Instant Credit with Google ML</a>
               </div>
             </div>
           </div>
@@ -156,7 +156,7 @@
                 <h6 data-animation="fadeInUp" data-delay="100ms">2 years interest</h6>
                 <h2 data-animation="fadeInUp" data-delay="300ms">get your <span>loan</span> now</h2>
                 <p data-animation="fadeInUp" data-delay="500ms">Vestibulum eu vehicula elit, nec elementum orci. Praesent aliquet ves tibulum tempus. Pellentesque posuere pharetra turpis, eget finibus erat porta placerat.</p>
-                <a href="#" data-toggle="modal" data-target="#credit-enroll-dialog" class="btn credit-btn mt-50" data-animation="fadeInDown" data-delay="700ms">Discover</a>
+                <a href="#" data-toggle="modal" data-target="#credit-enroll-dialog" class="btn credit-btn mt-50" data-animation="fadeInDown" data-delay="700ms">Try Instant Credit with Google ML</a>
               </div>
             </div>
           </div>
@@ -176,7 +176,7 @@
                 <h6 data-animation="fadeInDown" data-delay="100ms">2 years interest</h6>
                 <h2 data-animation="fadeInDown" data-delay="300ms">get your <span>loan</span> now</h2>
                 <p data-animation="fadeInDown" data-delay="500ms">Vestibulum eu vehicula elit, nec elementum orci. Praesent aliquet ves tibulum tempus. Pellentesque posuere pharetra turpis, eget finibus erat porta placerat.</p>
-                <a href="#" data-toggle="modal" data-target="#credit-enroll-dialog" class="btn credit-btn mt-50" data-animation="fadeInDown" data-delay="700ms">Discover</a>
+                <a href="#" data-toggle="modal" data-target="#credit-enroll-dialog" class="btn credit-btn mt-50" data-animation="fadeInDown" data-delay="700ms">Try Instant Credit with Google ML</a>
               </div>
             </div>
           </div>
