updated chat app to use custom logo and name

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,7 @@
   <!-- Title -->
   <title>Apibank</title>
   <!-- Favicon -->
-  <link rel="icon" href="img/core-img/favicon.ico">
+  <link rel="icon" href="img/core-img/favicon.png">
   <!-- Stylesheet -->
   <link rel="stylesheet" href="style2.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
